# koakuma

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  flake.nix
cmake/: embed_html.cmake
data/: test.sql  users.csv
data/misc/: syntax.ebnf
data/sample/: uber_100.csv  uber_10k.csv  uber_1k.csv  users.csv
include/: ast.hpp  buffer_manager.hpp  catalog.hpp  cross.hpp  csv_extra.hpp  error.hpp  file_manager.hpp  lexer.hpp  pack.hpp  parser.hpp  peekable.hpp  query_executor.hpp  seq_file.hpp  token.hpp  types.hpp  util.hpp
include/api/: frontend.hpp  rest_server.hpp
include/engine/: buffer_manager.hpp  engine.hpp  file_manager.hpp
include/file/: append_file.hpp  common.hpp  seq_file.hpp
include/index/: btree.hpp  hash.hpp  rtree.hpp
include/layout/: record_page.hpp  slotted_page.hpp
include/parser/: ast.hpp  error.hpp  lexer.hpp  parser.hpp  peekable_lexer.hpp  token.hpp
src/: ast.cpp  buffer_manager.cpp  catalog.cpp  cross.cpp  csv_extra.cpp  file_manager.cpp  lexer.cpp  main.cpp  pack.cpp  parser.cpp  peekable.cpp  query_executor.cpp  seq_file.cpp  util.cpp
src/api/: frontend.html  rest_server.cpp
src/engine/: buffer_manager.cpp  engine.cpp  file_manager.cpp
src/file/: append_file.cpp  common.cpp  seq_file.cpp
src/index/: btree.cpp  hash.cpp  rtree.cpp
src/layout/: record_page.cpp  slotted_page.cpp
src/parser/: ast.cpp  lexer.cpp  parser.cpp  peekable_lexer.cpp
